# bac_detect

./: .bac_detectignore  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  results.json  setup.cfg  setup.py
.github/workflows/: ci.yml
examples/: machine_learning.py  suspicious.js  suspicious.php  suspicious.py  test_backdoor.js  test_backdoor.php  test_backdoor.py  test_typescript.ts
src/bac_detect/: __init__.py  _detect_obfuscation.py  api.py  backdoor_detector.py  ml_detector.py  patterns.json
tests/: t_detector.py  test_detector.py
