[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bac_detect"
version = "1.3.0"
description = "Detect backdoors in Python, JS, PHP and TypeScript code"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Ruslan", email = "ruslan@example.com" }
]
license = "MIT"
keywords = ["security", "backdoor", "static-analysis", "vulnerability-detection"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
  "bandit>=1.7.0",
  "pylint>=2.13.0",
  "esprima>=4.0.1",
  "tqdm>=4.0.0",
  "concurrent-log-handler>=0.9.20",
  "flask>=2.0.0",
  "werkzeug>=2.0.0",
  "numpy>=1.19.0"
]

[project.urls]
"Homepage" = "https://github.com/ruslan-user/bac_detect"
"Bug Tracker" = "https://github.com/ruslan-user/bac_detect/issues"
"Documentation" = "https://github.com/ruslan-user/bac_detect/wiki"

[project.scripts]
bac_detect = "bac_detect.backdoor_detector:main"
bac_detect_api = "bac_detect.api:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q --disable-warnings"
testpaths = [
    "tests",
]

[tool.setuptools.package-data]
"bac_detect" = ["patterns.json"]
